feat: harden webhook middleware with security, migrations, tests, CI and docs

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,10 @@ DB_NAME=middleware
 DB_USER=appuser
 DB_PASS=secret
 WEBHOOK_TOKEN=my_secret_token
+WEBHOOK_HMAC_SECRET=my_hmac_secret
+WEBHOOK_TIMESTAMP_TOLERANCE_SEC=300
+WEBHOOK_PROCESSING_BUDGET_MS=12000
+CURRENCY_API_RETRIES=3
+CURRENCY_API_BACKOFF_MS=200
+CURRENCY_CACHE_TTL_SEC=120
+CURRENCY_API_INSECURE_SSL=0
