--- a/composer.json
+++ b/composer.json
@@ -5,5 +5,20 @@
             "App\\": "app/"
         }
     },
-    "require": {}
+    "autoload-dev": {
+        "psr-4": {
+            "Tests\\": "tests/"
+        }
+    },
+    "require": {
+        "vlucas/phpdotenv": "^5.6"
+    },
+    "scripts": {
+        "migrate": "php bin/migrate.php",
+        "smoke": "php bin/smoke.php",
+        "test": "vendor/bin/phpunit --configuration phpunit.xml"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^13.0"
+    }
 }
